# pnp_color_blocks

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
launch/: get_robot_pose.launch.py  pnp.launch.py  pnp_ur.launch.py  pnp_xarm.launch.py
pnp_color_blocks/: get_position.py  pnp.py
src/: get_robot_pose.cpp  get_xarm_pose.cpp  pnp.cpp  pnp_try.cpp  pnp_ur.cpp  pnp_ur_no_gripper.cpp  test_robotiq_gripper.cpp  transform_pose_marker.cpp
yaml/: saved_joint_states.yaml
